<resources>
    <string name="app_name">Alfred</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Alfred</string>

    <string name="local_service_started">Alfred is Running</string>
    <string name="local_service_label">Alfred is Running</string>
    <string name="doorbell_alert">Visitor at the door!</string>
    <string name="doorbell_alert_label">Shall I send them away?</string>


    <!--Preferences and Settings Strings-->
    <string name="default_host_port">56</string>
    <string name="default_host_address">192.168.1.25</string>
    <string name="pref_cat_gen_title">Preferences</string>
    <string name="service_switch_toggle">Run Service in Background</string>
    <string name="pref_cat_net_title">Network Preferences</string>
    <string name="pref_host_address">Host Address</string>
    <string name="pref_host_address_summary">IPv4 Network Address</string>
    <string name="pref_host_port">Host Port</string>
    <string name="drawer_open">Menu</string>
    <string name="drawer_close">Alfred</string>
    <string name="title_activity_visitor">Visitors</string>
    <string name="title_activity_settings">Settings</string>
    <string name="network_service_notification_id">31913</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Visitors</item>
        <item>Settings</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <string-array name="nav_drawer_icons">
        <item>@mipmap/ic_bowtie_24dp</item>
        <item>@mipmap/ic_person_black_24dp</item>
        <item>@mipmap/ic_settings_black_24dp</item>
    </string-array>
</resources>
